[MODULES-294][MODULES-297] Unify iterateResources(), getResource() and getLocation() methods to reuse jarURI field.